update html file

--- a/HuongLuu/Tungkitchenmenu.html
+++ b/HuongLuu/Tungkitchenmenu.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Xem PDF: Tung's Kitchen</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
-    iframe {
-      width: 100vw;
-      height: 100vh;
-      border: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tung Kitchen Menu</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        iframe {
+            width: 100%;
+            height: 100vh;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-<iframe 
-  src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/vvthangdev/buffer/main/HuongLuu/Tungkitchenmenu.pdf&embedded=true" 
-  style="width:100%; height:100vh;" 
-  frameborder="0">
-</iframe>
+    <iframe src="https://docs.google.com/viewer?url=https://github.com/vvthangdev/buffer/raw/main/HuongLuu/Tungkitchenmenu.pdf&embedded=true"></iframe>
 </body>
 </html>
